--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ addons:
       - gfortran
       - libgtest-dev
       - cmake
-script: ./autogen.sh && ./configure && make
+script: mkdir -p build && cd build && cmake .. -DCMAKE_CXX_FLAGS=""  -DCMAKE_BUILD_TYPE=Release -DCMAKE_VERBOSE_MAKEFILE=ON -DGTEST_DIR=/usr/src/gtest -DHTML_DOCS=off && cmake --build . --target itpp && cmake --build . --target itpp_gtests
+
