--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ compiler:
   - gcc
 addons:
   apt:
+    sources:
+      - george-edison55-precise-backports
     packages:
       - debhelper
       - libblas-dev
@@ -12,5 +14,6 @@ addons:
       - gfortran
       - libgtest-dev
       - cmake
+      - cmake-data
 script: mkdir -p build && cd build && cmake .. -DCMAKE_CXX_FLAGS=""  -DCMAKE_BUILD_TYPE=Release -DCMAKE_VERBOSE_MAKEFILE=ON -DGTEST_DIR=/usr/src/gtest -DHTML_DOCS=off && cmake --build . --target itpp && cmake --build . --target itpp_gtests
 
