--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
   - mkdir -p build-gcov && cd build-gcov && cmake .. -DCMAKE_CXX_FLAGS="-O0 -g -fprofile-arcs -ftest-coverage" -DCMAKE_EXE_LINKER_FLAGS="-fprofile-arcs -ftest-coverage"  -DCMAKE_BUILD_TYPE=Debug -DCMAKE_VERBOSE_MAKEFILE=ON -DGTEST_DIR=/usr/src/gtest -DHTML_DOCS=off && cmake --build . --target itpp && cmake --build . --target itpp_gtests && ./gtests/itpp_gtests && cd ..
 
 after_success:
-  - cd build-gcov && coveralls --exclude lib --exclude tests --gcov-options '\-lp' && cd ..
+  - cd build-gcov && coveralls --exclude tests --gcov-options '\-lp' && cd ..
